Fixed displaying scrollbars when it's not required

--- a/styles/common/scrollbar.less
+++ b/styles/common/scrollbar.less
@@ -19,7 +19,7 @@
 
 	display: block;
 	height: 100%;
-	max-height: inherit;
+	max-height: none;
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
 	position: relative;
